--- a/css/style.css
+++ b/css/style.css
@@ -48,12 +48,12 @@ section{
     padding: 6rem 0;
 }
 
-section h2{
+/* section h2{
     text-align: center;
     margin-bottom: 4rem;
-}
+} */
 
-h1, h2, h3, h4, h5{
+h1, h2, h3, h4, h5, h6{
     line-height: 1.2;
 }
 
@@ -147,6 +147,78 @@ header{
     position: relative;
     top: 5rem;
     overflow: hidden;
-    /* height: 70vh; */
+    height: 70vh;
     margin-bottom: 5rem;
+}
+.header-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    gap: 5rem;
+    height: 100%;
+}
+.header-left p{
+    margin: 1rem 0 2.4rem;
+}
+
+
+/**********************************/
+/********** Categories ************/
+/**********************************/
+
+.categories{
+    background: var(--color-bg1);
+    height: 29rem;
+}
+.categories h2{
+    line-height: 1;
+    margin-bottom: 3rem;
+}
+.categories-container{
+    display: grid;
+    grid-template-columns: 40% 60%;
+}
+.categories-left{
+    margin-right: 4rem;
+}
+.categories-left p{
+    margin: 1rem 0 3rem;
+}
+.categories-right{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.2rem;
+}
+.category{
+    background: var(--color-bg2);
+    padding: 2rem;
+    border-radius: 2rem;
+    transition: var(--transition);
+}
+.category:hover{
+    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.3);
+    z-index: 1;
+}
+.category:nth-child(2) .category-icon{
+    background: var(--color-danger);
+}
+.category:nth-child(3) .category-icon{
+    background: var(--color-success);
+}
+.category:nth-child(4) .category-icon{
+    background: var(--color-warning);
+}
+.category:nth-child(5) .category-icon{
+    background: var(--color-success);
+}
+.category-icon{
+    background: var(--color-primary);
+    padding: 0.7rem;
+    border-radius: 0.9rem;
+}
+.category h5{
+    margin: 2rem 0 1rem;
+}
+.category p{
+    font-size: 0.85rem;
 }
