--- a/styles/components/categories.css
+++ b/styles/components/categories.css
@@ -3,7 +3,7 @@
 /**********************************/
 
 .categories{
-    background: var(--color-bg1);
+    background: var(--clr-bg1);
     height: 29rem;
 }
 .categories h2{
@@ -26,7 +26,7 @@
     gap: 1.2rem;
 }
 .category{
-    background: var(--color-bg2);
+    background: var(--clr-bg2);
     padding: 2rem;
     border-radius: 2rem;
     transition: var(--transition);
@@ -36,23 +36,23 @@
     z-index: 1;
 }
 .category:nth-child(2) .category-icon{
-    background: var(--color-danger);
+    background: var(--clr-danger);
 }
 .category:nth-child(3) .category-icon{
-    background: var(--color-success);
+    background: var(--clr-success);
 }
 .category:nth-child(4) .category-icon{
-    background: var(--color-warning);
+    background: var(--clr-warning);
 }
 .category:nth-child(5) .category-icon{
-    background: var(--color-success);
+    background: var(--clr-success);
 }
 .category-icon{
-    background: var(--color-primary);
+    background: var(--clr-primary);
     padding: 0.7rem;
     border-radius: 0.9rem;
 }
-.category h5{
+.category h6{
     margin: 2rem 0 1rem;
 }
 .category p{
