--- a/styles/utils.css
+++ b/styles/utils.css
@@ -20,8 +20,8 @@ section{
 .btn{
     /* ↓↓ Set a width and height on the element and the top and bottom margins/paddings are respected ↓↓ */ 
      display: inline-block;
-     background: var(--color-white);
-     color: var(--color-black);
+     background: var(--clr-white);
+     color: var(--clr-black);
      padding: 1rem 2rem;
      border: 1px solid transparent;
      font-weight: 500;
@@ -30,11 +30,11 @@ section{
 
 .btn:hover{
     background: transparent;
-    color: var(--color-white);
-    border-color: var(--color-white);
+    color: var(--clr-white);
+    border-color: var(--clr-white);
 }
 
 .btn-primary{
-    background: var(--color-danger);
-    color: var(--color-white);
+    background: var(--clr-danger);
+    color: var(--clr-white);
 }
