--- a/styles/components/navbar.css
+++ b/styles/components/navbar.css
@@ -44,3 +44,8 @@ nav button {
   background: var(--clr-primary);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
 }
+
+/* Apply transition to window-scroll */
+.scroll-transition {
+  transition: all 0.25s;
+}
