--- a/styles/components/faqs.css
+++ b/styles/components/faqs.css
@@ -8,14 +8,18 @@
 }
 
 .faqs-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  gap: 1rem;
+}
+.faqs-left,
+.faqs-right {
+  display: flex;
+  flex-direction: column;
   gap: 1rem;
 }
 
 .faq {
   padding: 2rem;
-  display: flex;
   background: var(--clr-primary);
   gap: 1.4rem;
   align-items: center;
@@ -25,11 +29,32 @@
 .faq-question {
   font-size: 1rem;
   line-height: 2.2;
+  transition: color 0.25s;
+}
+.faq-question:hover {
+  color: var(--clr-bg2);
+}
+.faqs-trigger {
+  display: flex;
+  gap: 1.5rem;
 }
 
-.faq-icon {
-  align-self: flex-start;
-  /* ↓↓ Apply transform pivoting off top ↓↓ */
-  transform-origin: top;
-  transform: translateY(13%) scale(1.2);
+.faq-icon span {
+  background: white;
+  width: 1rem;
+  height: 1.5px;
+  display: block;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.faq-icon span:before {
+  content: "";
+  background: white;
+  width: 1rem;
+  height: 1.5px;
+  display: block;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%) rotate(90deg);
 }
