--- a/styles/components/faqs.css
+++ b/styles/components/faqs.css
@@ -40,19 +40,20 @@
 }
 
 .faq-icon span {
-  background: white;
-  width: 1rem;
-  height: 1.5px;
+  background: var(--clr-white);
+  height: 1rem;
+  width: 2.5px;
   display: block;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
+  transition: transform 0.15s ease-out;
 }
 .faq-icon span:before {
   content: "";
-  background: white;
-  width: 1rem;
-  height: 1.5px;
+  background: var(--clr-white);
+  height: 1rem;
+  width: 2px;
   display: block;
   position: absolute;
   top: 50%;
