--- a/styles/components/categories.css
+++ b/styles/components/categories.css
@@ -2,63 +2,88 @@
 /********** Categories ************/
 /**********************************/
 
-.categories{
-    background: var(--clr-bg1);
-    height: 29rem;
+.categories {
+  background: var(--clr-bg1);
+  height: 29rem;
 }
-.categories h2{
-    line-height: 1;
-    margin-bottom: 3rem;
+.categories h2 {
+  line-height: 1;
+  margin-bottom: 3rem;
 }
-.categories-container{
+.categories-container {
+  display: grid;
+  grid-template-columns: 40% 60%;
+}
+.categories-left {
+  margin-right: 4rem;
+}
+.categories-left p {
+  margin: 1rem 0 3rem;
+}
+.categories-right {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.2rem;
+}
+.category {
+  background: var(--clr-bg2);
+  padding: 2rem;
+  border-radius: 2rem;
+  transition: var(--transition);
+}
+.category:hover {
+  box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.3);
+  z-index: 1;
+}
+.category:nth-child(2) .category-icon {
+  background: var(--clr-danger);
+}
+.category:nth-child(3) .category-icon {
+  background: var(--clr-success);
+}
+.category:nth-child(4) .category-icon {
+  background: var(--clr-warning);
+}
+.category:nth-child(5) .category-icon {
+  background: var(--clr-success);
+}
+.category-icon {
+  background: var(--clr-primary);
+  padding: 0.7rem;
+  border-radius: 0.9rem;
+}
+.category h6 {
+  margin: 2rem 0 1rem;
+}
+.category p {
+  font-size: 0.85rem;
+}
+.category .fa-solid,
+.fas {
+  width: 1.3rem;
+  text-align: center;
+}
+
+@media (max-width: 1024px) {
+  .categories {
+    height: fit-content;
+  }
+  .categories-container {
     display: grid;
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 1fr;
+    gap: 3rem;
+  }
+  .categories-left {
+    margin-right: 0;
+  }
 }
-.categories-left{
-    margin-right: 4rem;
-}
-.categories-left p{
-    margin: 1rem 0 3rem;
-}
-.categories-right{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1.2rem;
-}
-.category{
-    background: var(--clr-bg2);
-    padding: 2rem;
-    border-radius: 2rem;
-    transition: var(--transition);
-}
-.category:hover{
-    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.3);
-    z-index: 1;
-}
-.category:nth-child(2) .category-icon{
-    background: var(--clr-danger);
-}
-.category:nth-child(3) .category-icon{
-    background: var(--clr-success);
-}
-.category:nth-child(4) .category-icon{
-    background: var(--clr-warning);
-}
-.category:nth-child(5) .category-icon{
-    background: var(--clr-success);
-}
-.category-icon{
-    background: var(--clr-primary);
-    padding: 0.7rem;
-    border-radius: 0.9rem;
-}
-.category h6{
-    margin: 2rem 0 1rem;
-}
-.category p{
-    font-size: 0.85rem;
-}
-.category .fa-solid, .fas {
-    width: 1.3rem;
-    text-align: center;
+@media (max-width: 1024px) {
+  .categories-right {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0.7rem;
+  }
+  .category {
+    padding: 1rem;
+    border-radius: 1rem;
+  }
 }
