--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -19,3 +19,23 @@ header {
 .hero-left p {
   margin: 1rem 0 2.4rem;
 }
+
+@media (max-width: 1024px) {
+  .hero-container {
+    gap: 0;
+    padding-bottom: 3rem;
+  }
+}
+
+@media (max-width: 600px) {
+  header {
+    height: 100vh;
+  }
+  .hero-container {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+  .hero-left p {
+    margin-bottom: 1.2rem;
+  }
+}
