--- a/styles/components/navbar.css
+++ b/styles/components/navbar.css
@@ -49,3 +49,48 @@ nav button {
 .scroll-transition {
   transition: all 0.25s;
 }
+
+@media (max-width: 1024px) {
+  /* Navbar */
+  /* nav button{
+    display: inline-block;
+    background: transparent;
+    font-size: 1.8rem;
+    color: var(--clr-white);
+    cursor: pointer;
+  }
+  #close-menu-btn{
+    display: none;
+  }
+  .nav-menu{
+    position: fixed;
+    top: 5rem;
+    right: 5%;
+    height: fit-content;
+    width: 18rem;
+    flex-direction: column;
+    gap: 0;
+  }
+
+  .nav-menu li{
+    width: 100%;
+    height: 5.8rem;
+  }
+  .nav-menu li a{
+    background: var(--clr-primary);
+    box-shadow: -4rem 6rem 10rem rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+  }
+
+  .nav-menu li a:hover{
+    background: var(--clr-bg2);
+    color: var(--clr-white);
+  } */
+}
+
+@media (max-width: 600px) {
+ 
+}
