--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@
   --clr-bg1: #2e3267;
   --clr-bg2: #424890;
 
-  --container-width-1g: 80%;
+  --container-width-lg: 80%;
   --container-width-md: 90%;
   --container-width-sm: 94%;
 
@@ -81,6 +81,21 @@ h5 {
 }
 h6 {
   font-size: 0.83rem;
+}
+
+@media (max-width: 1024px) {
+  h2 {
+    font-size: 2.2rem;
+  }
+  h3 {
+    font-size: 1.7rem;
+  }
+  h4 {
+    font-size: 1.4rem;
+  }
+  h5 {
+    font-size: 1.2rem;
+  }
 }
 
 /******************************/
